objects/vlocity_cmt__ContractTypeSetting__c.object
<CustomObject>
    <description>Specific option settings defined for a contract type that control characteristics and behavior of all contracts of that type.</description>
    <fields>
        <fullName>vlocity_cmt__ContractTypeId__c</fullName>
        <description>Contract type identifier</description>
        <label>Contract Type</label>
        <referenceTo>vlocity_cmt__ContractType__c</referenceTo>
        <relationshipLabel>Contract Type Settings</relationshipLabel>
        <relationshipName>ContractTypeSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractType__c</fullName>
        <description>Contract type</description>
        <formula>vlocity_cmt__ContractTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SetupValueParameters__c</fullName>
        <description>Setup value parameters if any</description>
        <label>Setup Value Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SetupValue__c</fullName>
        <description>Value setup for the Feature</description>
        <label>Setup Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Type Setting</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Type Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>